Istio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-insights-istio-mixer-adapter
  namespace: istio-system
  labels:
    app: application-insights-istio-mixer-adapter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application-insights-istio-mixer-adapter
  template:
    metadata:
      labels:
        app: application-insights-istio-mixer-adapter
    spec:
      containers:
      - name: application-insights-istio-mixer-adapter
        image: mcr.microsoft.com/applicationinsights/istiomixeradapter:v0.4
        ports:
        - name: http2-in-port
          containerPort: 6789
---
apiVersion: v1
kind: Service
metadata:
  name: application-insights-istio-mixer-adapter-service
  namespace: istio-system
spec:
  selector:
    app: application-insights-istio-mixer-adapter
  ports:
  - name: http2-in-port
    protocol: TCP
    port: 6789
    targetPort: 6789
