docker-kube-private.yaml
apiVersion: v1
kind: Service
metadata:
  name: samplespringboot
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "AKSSubnet2" #Pin ILB to specific subnet
  labels:
    run: samplespringboot
spec:
  type: LoadBalancer
  # loadBalancerIP: 10.0.4.88 #Specific static IP address as needed
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    run: samplespringboot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samplespringboot
spec:
  selector:
    matchLabels:
      run: samplespringboot
  replicas: 1
  template:
    metadata:
      labels:
        run: sb-web-sample-01-docker
    spec:
      containers:
      - name: samplespringboot
        image: aiadevopsaksacr.azurecr.io/samplespringboot
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: aiadevopsaksacr
