Deployment-sg.yml
# SG NameSpace
apiVersion: v1
kind: Namespace
metadata:
  name: firestorm-sg
  labels:
    app: firestorm-sg
---
# SG Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sg-quote-deploy
  namespace: firestorm-sg
spec:  
  replicas: 3
  selector:
    matchLabels:
      app:  quote-sg
  template:
    metadata:
      labels:
        app: quote-sg
    spec:
      containers:
      - name: quote-sg-container
        image: aiadevopsaksacr.azurecr.io/quote-sg-image:latest
        ports:
        - containerPort: 80
---
# Quote Service
apiVersion: v1
kind: Service
metadata:
  name: quote-sg-svc
  namespace: firestorm-sg
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: quote-sg
---
# Product deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sg-product-deploy
  namespace: firestorm-sg
spec:
  replicas: 3
  selector:
    matchLabels:
      app:  product-sg
  template:
    metadata:
      labels:
        app: product-sg
    spec:
      containers:
      - name: product-sg-container
        image: aiadevopsaksacr.azurecr.io/product-sg-image:latest
        ports:
        - containerPort: 80
---
# Product Service
apiVersion: v1
kind: Service
metadata:
  name: product-sg-svc
  namespace: firestorm-sg
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: product-sg
---
# Url Based Routing Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sg-url-routing-ingress
  namespace: firestorm-sg
  annotations:
    kubernetes.io/ingress.class: singapore
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: firestorm-sg.southeast.cloudapp.azure.com
    http:
      paths:
      - path: /sg/quote
        backend:
          serviceName: quote-sg-svc
          servicePort: 80
      - path: /sg/product
        backend:
          serviceName: product-sg-svc
          servicePort: 80
