Ingress.yml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
---

# Url Based Routing Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hk-url-routing-ingress
  namespace: firestorm-hk
  annotations:
    kubernetes.io/ingress.class: hongkong
    nginx.ingress.kubernetes.io/rewrite-target: /hk/
spec:
  rules:
  - host: firestorm-hk.southeast.cloudapp.azure.com/hk
    http:
      paths:
      - path: /hk/quote
        backend:
          serviceName: quote-hk-svc
          servicePort: 80
      - path: /hk/product
        backend:
          serviceName: product-hk-svc
          servicePort: 80

# Url Based Routing Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sg-url-routing-ingress
  namespace: firestorm-sg
  annotations:
    kubernetes.io/ingress.class: singapore
    nginx.ingress.kubernetes.io/rewrite-target: /sg/
spec:
  rules:
  - host: firestorm-sg.southeast.cloudapp.azure.com
    http:
      paths:
      - path: /sg/quote
        backend:
          serviceName: quote-sg-svc
          servicePort: 80
      - path: /sg/product
        backend:
          serviceName: product-sg-svc
          servicePort: 80
